# iyileme

./: CMakeLists.txt  README.md  package.xml
config/: parameters.yaml
include/iyileme/: IterativeOptimizerBase.hpp  OptimizerInterface.hpp  ParticleSwarmOptimization.hpp  QuadraticOptimization.hpp
src/: ParticleSwarmOptimization.cpp  QuadraticOptimization.cpp  quad_test.cpp  test.cpp
